--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,8 @@ beautifulsoup4==4.12.2
 Requests==2.31.0
 python-cfonts==1.5.2
 tabulate==0.9.0
+Flask==1.1.2
+gunicorn==20.1.0
+Jinja2==3.0.3
+werkzeug==2.0.2
+itsdangerous==2.0.1
